# advent_rust

./: Cargo.toml  README.md  input_day_19_sample.txt
inputs/: day19_sample.txt
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  day_10_part_1.rs  day_10_part_2.rs  day_11_part_1.rs  day_11_part_2.rs  day_12_part_1.rs  day_12_part_2.rs  day_13_part_1.rs  day_13_part_2.rs  day_14_part_1.rs  day_14_part_2.rs  day_15.rs  day_16.rs  day_17.rs  day_19.rs  day_1_part_1.rs  (+24 more)
year_2021/: Cargo.toml  README.md
year_2021/src/: main.rs
year_2022/: .gitignore  Cargo.toml  build_release.bat  build_release.cmd  build_release.sh  timings.txt
year_2022/benches/: benchmark_all_days.rs
year_2022/inputs/: day16.txt  day17.txt  day20.txt  day21.txt
year_2022/src/: .main.rs.rustfmt  day_24_attempt_1.rs  day_24_attempt_2.rs  main.rs  main_my.rs
year_2023/: .gitignore  Cargo.toml  README.md
year_2023/benches/: benchmark_all_days.rs  benchmark_day_09.rs
