[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = "2"
nom = "7"
itertools = "0.12.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark_all_days"
harness = false


[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "day01"
path = "src/bin/day01.rs"

[[bin]]
name = "day02"
path = "src/bin/day02.rs"

[[bin]]
name = "day03"
path = "src/bin/day03.rs"

[[bin]]
name = "day04"
path = "src/bin/day04.rs"

[[bin]]
name = "day05"
path = "src/bin/day05.rs"

[[bin]]
name = "day06"
path = "src/bin/day06.rs"
